--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "module": "ESNext",
     "moduleResolution": "node", // 使用 Node.js 的模块解析
     "declaration": true,
-    "declarationDir": "lib/types",
-    "outDir": "lib",
+    "declarationDir": "dist/types",
+    "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -15,5 +15,5 @@
     "checkJs": false
   },
   "include": ["src/**/*"], // 包含的源文件
-  "exclude": ["node_modules", "lib"] // 排除 node_modules 文件夹
+  "exclude": ["node_modules", "dist"] // 排除 node_modules 文件夹
 }
