--- a/demo-vue3-html/package.json
+++ b/demo-vue3-html/package.json
@@ -13,6 +13,7 @@
     "@codemirror/theme-one-dark": "^6.1.2",
     "codemirror": "^6.0.1",
     "element-plus": "^2.9.10",
+    "larkexplorer-sdk-pro": "^0.0.42",
     "vue": "^3.2.45",
     "vue-clipboard3": "^2.0.0",
     "vue-codemirror": "^6.1.1"
